// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test ActionGroup render ActionGroup one_button_action_template 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "justifyContent": "center",
      "marginTop": 103,
      "padding": 20,
      "width": "100%",
    }
  }
>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "#FAFAFA",
        "borderRadius": 200,
        "elevation": 5,
        "height": 237,
        "justifyContent": "center",
        "opacity": 1,
        "shadowColor": "#3031331a",
        "shadowOffset": Object {
          "height": 8,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 12,
        "width": 237,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "backgroundColor": "#FFFFFF",
          "borderRadius": 200,
          "elevation": 2,
          "height": 195,
          "justifyContent": "center",
          "shadowColor": "#000000",
          "shadowOffset": Object {
            "height": 4,
            "width": 0,
          },
          "shadowOpacity": 0.15,
          "shadowRadius": 12,
          "width": 195,
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#00979D",
              "fontFamily": "antoutline",
              "fontSize": 44,
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            undefined,
          ]
        }
      >
        
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#000",
              "fontFamily": "SFProDisplay-Regular",
              "fontSize": undefined,
              "lineHeight": undefined,
              "textAlign": "left",
              "textDecorationLine": "none",
            },
            Object {
              "color": "#595959",
              "fontSize": 16,
              "marginTop": 18,
            },
          ]
        }
      >
        UP
      </Text>
    </View>
  </View>
</View>
`;

exports[`Test ActionGroup render ActionGroup three_button_action_template 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "borderColor": "#E8E8E8",
      "borderRadius": 10,
      "borderWidth": 1,
      "elevation": 3,
      "flexDirection": "row",
      "justifyContent": "space-around",
      "marginHorizontal": 20,
      "marginTop": 20,
      "paddingHorizontal": 8,
      "paddingVertical": 16,
      "shadowColor": "#000000",
      "shadowOffset": Object {
        "height": 2,
        "width": 0,
      },
      "shadowOpacity": 0.25,
      "shadowRadius": 3.84,
    }
  }
>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "aspectRatio": 1,
        "backgroundColor": "#FFFFFF",
        "borderColor": "#E8E8E8",
        "borderRadius": 10,
        "borderWidth": 1,
        "elevation": 3,
        "flex": 1,
        "justifyContent": "center",
        "marginHorizontal": 4,
        "opacity": 1,
        "shadowColor": "#303133",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.25,
        "shadowRadius": 3.84,
      }
    }
  >
    <View
      style={
        Object {
          "height": 28,
          "marginBottom": 7,
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#D9D9D9",
              "fontFamily": "antoutline",
              "fontSize": 30,
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            undefined,
          ]
        }
      >
        
      </Text>
    </View>
    <Text
      style={
        Array [
          Object {
            "color": "#000",
            "fontFamily": "SFProDisplay-Regular",
            "fontSize": undefined,
            "lineHeight": undefined,
            "textAlign": "left",
            "textDecorationLine": "none",
          },
          Object {
            "fontSize": 14,
            "lineHeight": 22,
          },
        ]
      }
    />
  </View>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "aspectRatio": 1,
        "backgroundColor": "#FFFFFF",
        "borderColor": "#E8E8E8",
        "borderRadius": 10,
        "borderWidth": 1,
        "elevation": 3,
        "flex": 1,
        "justifyContent": "center",
        "marginHorizontal": 4,
        "opacity": 1,
        "shadowColor": "#303133",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.25,
        "shadowRadius": 3.84,
      }
    }
  >
    <View
      style={
        Object {
          "height": 28,
          "marginBottom": 7,
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#D9D9D9",
              "fontFamily": "antoutline",
              "fontSize": 30,
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            undefined,
          ]
        }
      >
        
      </Text>
    </View>
    <Text
      style={
        Array [
          Object {
            "color": "#000",
            "fontFamily": "SFProDisplay-Regular",
            "fontSize": undefined,
            "lineHeight": undefined,
            "textAlign": "left",
            "textDecorationLine": "none",
          },
          Object {
            "fontSize": 14,
            "lineHeight": 22,
          },
        ]
      }
    />
  </View>
  <View
    accessible={true}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "aspectRatio": 1,
        "backgroundColor": "#FFFFFF",
        "borderColor": "#E8E8E8",
        "borderRadius": 10,
        "borderWidth": 1,
        "elevation": 3,
        "flex": 1,
        "justifyContent": "center",
        "marginHorizontal": 4,
        "opacity": 1,
        "shadowColor": "#303133",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.25,
        "shadowRadius": 3.84,
      }
    }
  >
    <View
      style={
        Object {
          "height": 28,
          "marginBottom": 7,
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#D9D9D9",
              "fontFamily": "antoutline",
              "fontSize": 30,
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            undefined,
          ]
        }
      >
        
      </Text>
    </View>
    <Text
      style={
        Array [
          Object {
            "color": "#000",
            "fontFamily": "SFProDisplay-Regular",
            "fontSize": undefined,
            "lineHeight": undefined,
            "textAlign": "left",
            "textDecorationLine": "none",
          },
          Object {
            "fontSize": 14,
            "lineHeight": 22,
          },
        ]
      }
    />
  </View>
</View>
`;
